--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,25 @@
-
 {
     "manifest_version": 2,
     "name": "Carbon Footprint Calculator",
-    "version": "1.0",
-    "description": "Calculate and track your carbon footprint.",
-    "permissions": ["storage", "activeTab"],
+    "version": "0.0.2",
+    "description": "Calculate your carbon footprint based on browsing time.",
+    "permissions": ["activeTab", "storage"],
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
     "browser_action": {
-      "default_icon": "icon.png",
-      "default_popup": "popup.html"
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "images/icon16.png",
+        "48": "images/icon48.png",
+        "128": "images/icon128.png"
+      }
     },
     "icons": {
-      "48": "icon.png"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["popup.js"]
-      }
-    ]
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
   }
   
