--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "Carbon Footprint Calculator",
+    "name": "Carbon Footprint of working tab",
     "version": "0.0.2",
     "description": "Calculate your carbon footprint based on browsing time.",
     "permissions": ["activeTab", "storage"],
